--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="w-full bg-white border-b border-gray-200 sticky top-0 z-50">
     <div class="max-w-7xl mx-auto flex items-center justify-between h-16 px-4 md:px-8">
-      <div class="font-extrabold text-2xl text-[#151587] tracking-tight">BandBooster</div>
+      <a href="/" class="font-extrabold text-3xl text-[#151587] tracking-tight cursor-pointer">BandBooster</a>
       <nav class="hidden md:flex gap-8">
         <a href="#features" class="font-medium text-gray-700 hover:text-blue-600 transition">Features</a>
         <a href="#how" class="font-medium text-gray-700 hover:text-blue-600 transition">How it Works</a>
@@ -21,8 +21,11 @@
         <a href="#pricing" class="font-medium text-gray-700 hover:text-blue-600 transition">Pricing</a>
       </nav>
       <div class="flex items-center gap-3">
-        <a href="#login" class="text-blue-600 font-semibold hover:underline">Log In</a>
-        <a href="#signup" class="bg-blue-600 text-white font-bold px-5 py-2 rounded-full shadow hover:bg-blue-700 transition">Sign Up</a>
+        <a href="#login" class="text-[#151587] hover:text-blue-600 font-semibold">Log In</a>
+        <a href="#signup"
+           class="bg-gradient-to-r from-purple-400 to-pink-500 text-white font-bold px-5 py-2 rounded-full shadow hover:from-purple-500 hover:to-pink-600 transition">
+          Start for free
+        </a>
       </div>
     </div>
   </header>
